--- a/vATIS.Desktop/Ui/Components/AtisStationView.axaml
+++ b/vATIS.Desktop/Ui/Components/AtisStationView.axaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:vm="using:Vatsim.Vatis.Ui.ViewModels"
              xmlns:converters="using:Vatsim.Vatis.Ui.Converters"
-			 xmlns:profiles="using:Vatsim.Vatis.Profiles"
-			 xmlns:behaviors="using:Vatsim.Vatis.Ui.Behaviors"
+             xmlns:controls="using:Vatsim.Vatis.Ui.Controls"
+             xmlns:behaviors="using:Vatsim.Vatis.Ui.Behaviors"
              xmlns:editor="clr-namespace:AvaloniaEdit;assembly=AvaloniaEdit"
              xmlns:models="clr-namespace:Vatsim.Vatis.Profiles.Models"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="300"
@@ -68,7 +68,7 @@
 			<Grid Grid.ColumnSpan="3" Grid.Column="0" Grid.Row="2" Margin="0,10,0,0" ColumnDefinitions="120,*,120"
 			      RowDefinitions="30">
 				<Button Command="{Binding VoiceRecordAtisCommand, DataType=vm:AtisStationViewModel}" Theme="{StaticResource Dark}" Content="RECORD ATIS" Grid.Column="0" Margin="0,0,5,0"/>
-				<ComboBox Name="AtisPreset" Classes="Dark" Grid.Column="1" Margin="0,-1,0,0" ItemsSource="{Binding AtisPresetList, DataType=vm:AtisStationViewModel}" DisplayMemberBinding="{Binding Name, DataType=models:AtisPreset}" SelectedItem="{Binding SelectedAtisPreset, DataType=vm:AtisStationViewModel, Mode=OneWay}">
+				<controls:NonNavigableComboBox Name="AtisPreset" Classes="Dark" Grid.Column="1" Margin="0,-1,0,0" ItemsSource="{Binding AtisPresetList, DataType=vm:AtisStationViewModel}" DisplayMemberBinding="{Binding Name, DataType=models:AtisPreset}" SelectedItem="{Binding SelectedAtisPreset, DataType=vm:AtisStationViewModel, Mode=OneWay}">
 					<ComboBox.Styles>
 						<Style Selector="ComboBox.Dark /template/ Grid">
 							<Setter Property="MaxHeight" Value="30"/>
@@ -79,7 +79,7 @@
 							<InvokeCommandAction Command="{Binding SelectedPresetChangedCommand, DataType=vm:AtisStationViewModel}" CommandParameter="{Binding #AtisPreset.SelectedItem}"/>
 						</RoutedEventTriggerBehavior>
 					</Interaction.Behaviors>
-				</ComboBox>
+				</controls:NonNavigableComboBox>
 				<Button Grid.Column="2" Margin="5,0,0,0" Theme="{StaticResource Dark}" Content="{Binding NetworkConnectionStatus, DataType=vm:AtisStationViewModel, Converter={StaticResource ConnectButtonLabelConverter}, FallbackValue=CONNECT}" Command="{Binding NetworkConnectCommand, DataType=vm:AtisStationViewModel}" Background="{Binding NetworkConnectionStatus, DataType=vm:AtisStationViewModel, Converter={StaticResource ConnectButtonColorConverter}}" />
 			</Grid>
 		</Grid>
