--- a/vATIS.Desktop/Ui/Dialogs/SettingsDialog.axaml
+++ b/vATIS.Desktop/Ui/Dialogs/SettingsDialog.axaml
@@ -19,7 +19,7 @@
 		Title="User Settings">
 	<Border BorderBrush="#646464" BorderThickness="1" Background="#323232" CornerRadius="5">
 		<StackPanel>
-			<Border BorderBrush="#646464" BorderThickness="0,0,0,1" Background="Transparent">
+			<Border BorderBrush="#646464" BorderThickness="0,0,0,1" Background="Transparent" PointerPressed="OnPointerPressed">
 				<TextBlock Text="User Settings" Padding="5" VerticalAlignment="Center" Foreground="#F0F0F0" FontWeight="Medium" />
 			</Border>
 			<StackPanel Spacing="5" Margin="15">
