--- a/vATIS.Desktop/Ui/Dialogs/SortPresetsDialog.axaml
+++ b/vATIS.Desktop/Ui/Dialogs/SortPresetsDialog.axaml
@@ -20,7 +20,7 @@
 	</Window.Resources>
 	<Border BorderBrush="#646464" BorderThickness="1" Background="#323232" CornerRadius="5">
 			<StackPanel Orientation="Vertical">
-				<Border CornerRadius="5,5,0,0" Background="#282828" Height="40">
+				<Border CornerRadius="5,5,0,0" Background="#282828" Height="40" PointerPressed="OnPointerPressed">
 					<Grid ColumnDefinitions="1*,1*">
 						<TextBlock Text="Sort Presets" Padding="5" Margin="5,0,0,0" VerticalAlignment="Center" Foreground="#F0F0F0" FontWeight="Medium" FontSize="14" Grid.Column="0" />
 						<Button Grid.Column="1" Theme="{StaticResource CloseButton}" HorizontalAlignment="Right" Margin="0,0,10,0" Command="{Binding CloseWindowCommand, DataType=vm:SortPresetsDialogViewModel}" CommandParameter="{Binding ElementName=Window}"/>
