--- a/vATIS.Desktop/Ui/Dialogs/StaticAirportConditionsDialog.axaml
+++ b/vATIS.Desktop/Ui/Dialogs/StaticAirportConditionsDialog.axaml
@@ -60,7 +60,7 @@
 				<Border Background="#000000" Opacity="0.80"/>
 			</Grid>
 			<StackPanel Orientation="Vertical">
-				<Border CornerRadius="5,5,0,0" Background="#282828" Height="40">
+				<Border CornerRadius="5,5,0,0" Background="#282828" Height="40" PointerPressed="OnPointerPressed">
 					<Grid ColumnDefinitions="1*,1*">
 						<TextBlock Text="Airport Conditions" Padding="5" Margin="5,0,0,0" VerticalAlignment="Center" Foreground="#F0F0F0" FontWeight="Medium" FontSize="14" Grid.Column="0" />
 						<Button Grid.Column="1" Theme="{StaticResource CloseButton}" HorizontalAlignment="Right" Margin="0,0,10,0" Command="{Binding CloseWindowCommand, DataType=vm:StaticAirportConditionsDialogViewModel}" CommandParameter="{Binding ElementName=Window}"/>
