Print profile serial in ATIS configuration window

--- a/vATIS.Desktop/Ui/AtisConfiguration/GeneralConfigView.axaml
+++ b/vATIS.Desktop/Ui/AtisConfiguration/GeneralConfigView.axaml
@@ -136,5 +136,6 @@
 			</Border>
 		</StackPanel>
 		<TextBlock Foreground="#FFA500" TextWrapping="Wrap" FontWeight="Medium">Note: Saving changes to the ATIS configuration will automatically<LineBreak/>disconnect it from the network if it is currently connected.</TextBlock>
+		<TextBlock Foreground="White" FontWeight="Medium" Text="{Binding ProfileSerialNumber, DataType=vm:GeneralConfigViewModel}"/>
 	</StackPanel>
 </UserControl>
