--- a/vATIS.Desktop/Ui/AtisConfiguration/FormattingView.axaml
+++ b/vATIS.Desktop/Ui/AtisConfiguration/FormattingView.axaml
@@ -753,6 +753,30 @@
 					</TabItem>
 				</TabControl>
 			</StackPanel>
+			<!--NOTAMs-->
+			<StackPanel Spacing="10" Margin="10,10,10,0" IsVisible="{Binding SelectedFormattingOption, DataType=vm:FormattingViewModel, Converter={StaticResource StringToBoolConverter}, ConverterParameter='NOTAMs'}">
+				<controls:GroupBox Header="Template" Theme="{StaticResource GroupBoxClassic}" Margin="0,10,0,0">
+					<StackPanel Orientation="Vertical" Spacing="10">
+						<StackPanel Orientation="Vertical">
+							<TextBlock Text="Text:" VerticalAlignment="Center"/>
+							<controls:TemplateVariableTextBox Text="{Binding NotamsTextTemplate, DataType=vm:FormattingViewModel}" TextWrapping="Wrap" AcceptsReturn="True" Height="60" Theme="{StaticResource DarkTextBox}"/>
+						</StackPanel>
+						<StackPanel Orientation="Vertical">
+							<TextBlock Text="Voice:" VerticalAlignment="Center"/>
+							<controls:TemplateVariableTextBox Text="{Binding NotamsVoiceTemplate, DataType=vm:FormattingViewModel}" TextWrapping="Wrap" AcceptsReturn="True" Height="60" Theme="{StaticResource DarkTextBox}"/>
+						</StackPanel>
+						<StackPanel Orientation="Horizontal" Spacing="10">
+							<Button
+								Theme="{StaticResource DarkVariable}"
+								ToolTip.Tip="The printed NOTAM text"
+								Command="{Binding TemplateVariableClicked, DataType=vm:FormattingViewModel}"
+								CommandParameter="{Binding $self.Content}">
+								{notams}
+							</Button>
+						</StackPanel>
+					</StackPanel>
+				</controls:GroupBox>
+			</StackPanel>
 			<!--Closing Statement-->
 			<StackPanel Spacing="10" Margin="10,10,10,0" IsVisible="{Binding SelectedFormattingOption, DataType=vm:FormattingViewModel, Converter={StaticResource StringToBoolConverter}, ConverterParameter='Closing Statement'}">
 				<CheckBox IsChecked="{Binding ClosingStatementAutoIncludeClosingStatement, DataType=vm:FormattingViewModel}" Theme="{StaticResource CheckBox}" ToolTip.Tip="If enabled, the closing statement will be automatically appended to the end of the ATIS without requiring the [CLOSING] variable in the ATIS preset template. This is useful if you want to customize the position of the closing statement in the ATIS.">Automatically include closing statement at the end of the ATIS</CheckBox>
