--- a/vATIS.Desktop/Ui/AtisConfiguration/FormattingView.axaml
+++ b/vATIS.Desktop/Ui/AtisConfiguration/FormattingView.axaml
@@ -5,7 +5,6 @@
              xmlns:vm="using:Vatsim.Vatis.Ui.ViewModels.AtisConfiguration"
              xmlns:behaviors="using:Vatsim.Vatis.Ui.Behaviors"
              xmlns:controls="using:Vatsim.Vatis.Ui.Controls"
-             xmlns:profiles="using:Vatsim.Vatis.Profiles"
              xmlns:converters="using:Vatsim.Vatis.Ui.Converters"
              xmlns:models="clr-namespace:Vatsim.Vatis.Profiles.Models"
              xmlns:groupBox="clr-namespace:Vatsim.Vatis.Ui.Controls.GroupBox"
@@ -46,9 +45,9 @@
 							<controls:TemplateVariableTextBox Text="{Binding ObservationTimeVoiceTemplate, DataType=vm:FormattingViewModel}" TextWrapping="Wrap" AcceptsReturn="True" Height="60" Theme="{StaticResource DarkTextBox}"/>
 						</StackPanel>
 						<StackPanel Orientation="Horizontal" Spacing="10">
-							<Button 
-								Theme="{StaticResource DarkVariable}" 
-								ToolTip.Tip="The METAR observation time (e.g. 0153)." 
+							<Button
+								Theme="{StaticResource DarkVariable}"
+								ToolTip.Tip="The METAR observation time (e.g. 0153)."
 								Command="{Binding TemplateVariableClicked, DataType=vm:FormattingViewModel}"
 								CommandParameter="{Binding $self.Content}">
 								{time}
@@ -154,7 +153,7 @@
 										Command="{Binding TemplateVariableClicked, DataType=vm:FormattingViewModel}"
 										CommandParameter="{Binding $self.Content}">
 										{wind}
-									</Button>															
+									</Button>
 									<Button
 										Theme="{StaticResource DarkVariable}"
 										ToolTip.Tip="The direction of the wind (e.g. 25010KT would yield 250). Magnetic variation is applied."
@@ -756,7 +755,7 @@
 			</StackPanel>
 			<!--NOTAMs-->
 			<StackPanel Spacing="10" Margin="10,10,10,0" IsVisible="{Binding SelectedFormattingOption, DataType=vm:FormattingViewModel, Converter={StaticResource StringToBoolConverter}, ConverterParameter='NOTAMs'}">
-				<controls:GroupBox Header="Template" Theme="{StaticResource GroupBoxClassic}" Margin="0,10,0,0">
+				<groupBox:GroupBoxControl Header="Template" Theme="{StaticResource GroupBoxClassic}" Margin="0,10,0,0">
 					<StackPanel Orientation="Vertical" Spacing="10">
 						<StackPanel Orientation="Vertical">
 							<TextBlock Text="Text:" VerticalAlignment="Center"/>
@@ -776,7 +775,7 @@
 							</Button>
 						</StackPanel>
 					</StackPanel>
-				</controls:GroupBox>
+				</groupBox:GroupBoxControl>
 			</StackPanel>
 			<!--Closing Statement-->
 			<StackPanel Spacing="10" Margin="10,10,10,0" IsVisible="{Binding SelectedFormattingOption, DataType=vm:FormattingViewModel, Converter={StaticResource StringToBoolConverter}, ConverterParameter='Closing Statement'}">
