Add option to automatically fetch real-world ATIS letter

--- a/vATIS.Desktop/Ui/Dialogs/SettingsDialog.axaml
+++ b/vATIS.Desktop/Ui/Dialogs/SettingsDialog.axaml
@@ -45,6 +45,7 @@
 				</StackPanel>
 				<StackPanel>
 					<CheckBox Theme="{StaticResource CheckBox}" Content="Suppress ATIS update notification sound" IsChecked="{Binding SuppressNotificationSound, DataType=vm:SettingsDialogViewModel}" />
+					<CheckBox Theme="{StaticResource CheckBox}" Content="Automatically fetch ATIS letter" ToolTip.Tip="Fetch the real-world ATIS letter for supported stations automatically after connecting to the network." IsChecked="{Binding AutoFetchAtisLetter, DataType=vm:SettingsDialogViewModel}" />
 				</StackPanel>
 				<Grid ColumnDefinitions="1*,5,1*">
 					<Button Theme="{StaticResource Dark}" Grid.Column="0" HorizontalAlignment="Stretch" Content="Save" Command="{Binding SaveSettingsCommand, DataType=vm:SettingsDialogViewModel}" CommandParameter="{Binding ElementName=Window}" IsDefault="True" />
